Harden Google Sheets gateway for Android API 23